--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/",
             "Tests\\":"tests"
         }
     },
